<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:text="@string/food"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/tvFood"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_food_name"
        android:inputType=""
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <TextView
        android:text="@string/calories"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_height="0dp"
        android:layout_width="0dp" />

    <EditText
        android:id="@+id/tvCalories"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_calories"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_this_food"
        android:layout_marginTop="16dp"/>
</LinearLayout>
